<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    
    <TextView
        android:id="@+id/welcome_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notice"
        android:textSize="30sp"
        android:textColor="@color/text"
        android:gravity="left"
        android:layout_marginBottom="20dp"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/welcome_promise"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:lineSpacingExtra="10dp"
        android:gravity="left"
        android:layout_below="@+id/welcome_notice"/>

    <LinearLayout
        android:id="@+id/welcome_promise_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:orientation="horizontal" 
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/welcome_promise_agree"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/agree"
            android:textColor="@color/text" />

        <Button
            android:id="@+id/welcome_promise_quit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/disagree"
            android:textColor="@color/text" />
    </LinearLayout>

</RelativeLayout>